Fixes overspill width issue

--- a/src/scss/admin/mixins/_general.scss
+++ b/src/scss/admin/mixins/_general.scss
@@ -144,13 +144,11 @@
 }
 
 @mixin overspill {
-  width: calc(100% + 2em);
   margin-left: calc(-1em);
   margin-right: calc(-1em);
 }
 
 @mixin overspill-reset {
-  width: auto;
   margin-left: 0;
   margin-right: 0;
 }
